force-app/main/default/objects/nFORCE__Screen_Section__c/fields/Custom_Code_in_Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>Custom_Code_in_Screen_Section__c</fullName>
    <inlineHelpText>Please add the custom code used in the screen section to this field.</inlineHelpText>
    <label>Custom Code in Screen Section?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>