force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Are_Columns_Sortable__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Are_Columns_Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to allow users to sort columns on screen sections. By default, it is false.</description>
    <inlineHelpText>Select this checkbox to allow users to sort columns on screen sections.</inlineHelpText>
    <label>Are Columns Sortable</label>
    <type>Checkbox</type>
</CustomField>