force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Auto_Save__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Auto_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to allow the screen section to auto-save field values after the user stops typing.</description>
    <label>Auto Save</label>
    <type>Checkbox</type>
</CustomField>