force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Conditional_Display_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
    <description>This field is optional and must be manually populated. It stores the Forms syntax that is used to determine whether a conditional screen section should be displayed.</description>
    <label>Conditional Display Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>