force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Disable_Print__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. The admin manually populates this field. This field is not used if &quot;nFORCE__Disable_Print__c&quot; is enabled on nFORCE__Screen__c. Otherwise, when this field is enabled, screen sections are not printed. If disabled, the screen section prints if it is expanded at the time the admin prints. By default, this is disabled.</description>
    <label>Disable Print</label>
    <type>Checkbox</type>
</CustomField>