force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Display_Toggle_Effect__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Display_Toggle_Effect__c</fullName>
    <description>This field is optional. The admin manually populates this field. It controls the type of animation when closing or opening a screen section in the credit memo. By default, it is slide.</description>
    <label>Display Toggle Effect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fade</fullName>
            </value>
            <value>
                <fullName>slide</fullName>
                <default>true</default>
                <label>slide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>