force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Display_Toggle_Header__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Display_Toggle_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is true and allows the Header to be clicked to render the minimized section.</description>
    <label>Display Toggle Header</label>
    <type>Checkbox</type>
</CustomField>