force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Headless__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Headless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is false. When set to true, the section will render with no header and will render with the previous section.</description>
    <label>Headless</label>
    <type>Checkbox</type>
</CustomField>