force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. The admin manually populates this field. It controls whether fields are able to be edited when the screen section is being used by a route.</description>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>