force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Section_Resource__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Section_Resource__c</fullName>
    <description>This field is required. It is manually populated. This field specifies how the screen section obtains the data to be displayed. The values SObjectScreenResource and ConfiguredSObjectScreenResource use coded screen resources to display data. The values MappedSObjectScreenResource, MappedSObjectHierarchyScreenResource, MappedSObjectListScreenResource, and ReferenceFilteredHierarchyScreenResource use the Layout Builder tool to determine what data to display.</description>
    <label>Section Resource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>ConfiguredSObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>MappedSObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>MappedSObjectHierarchyScreenResource</fullName>
            </value>
            <value>
                <fullName>GrandchildScreenResource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>