force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__sObject_Type__c</fullName>
    <description>This field is required. The admin manually populates it. This field specifies the object the screen section displays information on. Additional child or parent objects of the object can also be used to display data by using the Layout Builder tool.</description>
    <label>sObject Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Loan__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Review__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Product_Package__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Loan_Collateral2__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Fee__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>