force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Widget__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Widget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional. It is manually populated.  This field specifies the widget associated with the screen section. It is used to store code for customizable components of the credit memo and UI, such as the ckEditor in Credit Memo.</description>
    <label>Widget</label>
    <referenceTo>nFORCE__Widget__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>